@@ -1,14 +1,14 @@
 Package: kknn
 Title: Weighted k-Nearest Neighbors
-Version: 1.1-1
-Date: 2011-10-12
+Version: 1.1-2
+Date: 2012-06-22
 Author: Klaus Schliep & Klaus Hechenbichler
 Description: Weighted k-Nearest Neighbors Classification, Regression
         and Clustering
 Maintainer: Klaus Schliep <klaus.schliep@gmail.com>
-Depends: R (>= 2.10)
-Imports: Matrix, igraph
+Depends: R (>= 2.10), igraph (>= 0.6)
+Imports: Matrix
 License: GPL (>= 2)
-Packaged: 2011-10-12 11:40:02 UTC; kschliep
+Packaged: 2012-06-22 15:56:15 UTC; klaus
 Repository: CRAN
-Date/Publication: 2011-10-12 12:09:54
+Date/Publication: 2012-06-22 17:26:17
