@@ -55,7 +55,7 @@ Analysis and Machine Intelligence}, \bold{22 (8)}, 888--905
 }
 \author{ Klaus P. Schliep \email{klaus.schliep@gmail.com}}
 \seealso{
-\code{\link{kknn}}, \code{\link[kernlab]{specc}}, \code{\link{arpack}}, \code{\link{kmeans}}
+\code{\link{kknn}}, \code{\link{arpack}}, \code{\link{kmeans}}
 }
 \examples{
 data(iris)
